# OJT-Management-System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
OMS/: build.sh  pyproject.toml
OMS/oms/: Dockerfile  docker-compose.yml  entrypoint.sh  manage.py  requirements.txt
OMS/oms/app/: admin.py  custom_widgets.py  forms.py  models.py  urls.py  views.py
OMS/oms/app/migrations/: 0001_initial.py  0002_announcement.py  0003_auto_20240712_2049.py  0004_announcement_delete_announcementtable.py  0005_renderinghourstable.py
OMS/oms/app/static/js/: adminModal.js  index.js
OMS/oms/app/templates/: rejection_email.txt
OMS/oms/app/templates/app/: TimeLogs.html  accomplisment.html  announcement.html  approval_email.txt  base.html  dashboard.html  (+19 more)
OMS/oms/backend_side/: asgi.py  settings.py  urls.py  wsgi.py
OMS/oms/staticfiles/css/: main-dashboard.css
OMS/oms/staticfiles/js/: upload.js
OMS/oms/students/: custom_widgets.py  forms.py  models.py  urls.py  views.py
OMS/oms/students/migrations/: 0001_initial.py  0002_auto_20240525_1115.py  0003_auto_20240525_2101.py  0004_auto_20240525_2124.py  0005_timelog.py  0006_rename_timelog_timelogs.py  0007_auto_20240526_2044.py  0008_auto_20240620_2159.py  0009_auto_20240623_2039.py  0010_auto_20240625_1518.py  0011_auto_20240625_1929.py  0012_auto_20240629_2000.py  0013_tablestudents_alter_timelog_student_and_more.py  0014_studenttable_alter_timelog_student_and_more.py  0015_datatablestudents_alter_timelog_student_and_more.py  0016_schedule.py
OMS/oms/superapp/: forms.py  urls.py  views.py
(+30 files in other folders)
